--- a/package.json
+++ b/package.json
@@ -21,14 +21,29 @@
     "snippets": [
       {
         "language": "css",
-        "path": "./snippets/tokens.json"
+        "path": "./src/snippets/tokens.json"
+      },
+      {
+        "language": "scss",
+        "path": "./src/snippets/tokens.json"
+      },
+      {
+        "language": "sass",
+        "path": "./src/snippets/tokens.json"
+      },
+      {
+        "language": "stylus",
+        "path": "./src/snippets/tokens.json"
       }
     ]
   },
   "scripts": {
     "lint": "eslint .",
     "pretest": "yarn run lint",
-    "test": "vscode-test"
+    "test": "vscode-test",
+    "dev:snippets": "nodemon ./src/scripts/generateSnippets.js",
+    "build:snippets": "node ./src/scripts/generateSnippets.js",
+    "build:production": "yarn build:snippets && vsce package"
   },
   "devDependencies": {
     "@types/mocha": "^10.0.9",
@@ -37,6 +52,7 @@
     "eslint": "^9.13.0"
   },
   "dependencies": {
-    "esbuild": "^0.24.0"
+    "esbuild": "^0.24.0",
+    "nodemon": "^3.1.7"
   }
 }
