feat: add readme instructions

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "color": "#FF620",
     "theme": "dark"
   },
-  "description": "",
+  "description": "Encontre os tokens do IDS com facilidade.",
   "version": "0.0.1",
   "repository": {
     "type": "git",
